# P4F2-3

./: EFController.py  ManipulatorController.py  ManipulatorMain.py  positions.json
Vision software/: CmakeLists.txt  detection_publisher_node.py  package.xml
Vision_software/: CmakeLists.txt  VisionservicemessageV1.srv  detection_publisher_node.py  package.xml
Vision_software/msg/: BoundingBoxAngle.msg
Vision_software/scripts/: detection_publisher_node.py  nieuw.py
launch/: compute_cp.launch  main_bash.sh
scripts/: HMI_2.py  Hoofdprogramma.py  SimpleHMI.py  compute_cp.py  main.py
