<package format="2">
  <name>Vision_software</name>
  <version>0.0.0</version>
  <description>The Vision_software package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license> <!-- Replace with the appropriate license -->
  
  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Export information for ament -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
